# icecream-sundae

./: .dockerignore  .gitignore  .travis.yml  README.md  config.h.in  icecream-sundae.desktop  meson.build  snapcraft.yaml
.github/workflows/: build.yml
.travis/fedora-27/: Dockerfile
.travis/fedora-28/: Dockerfile
.travis/fedora-30/: Dockerfile
.travis/fedora-latest/: Dockerfile
.travis/ubuntu-artful/: Dockerfile
.travis/ubuntu-bionic/: Dockerfile
.travis/ubuntu-latest/: Dockerfile
.travis/ubuntu-rolling/: Dockerfile
.travis/ubuntu-trusty/: Dockerfile
.travis/ubuntu-xenial/: Dockerfile
ci/: test.sh  test_build.sh
ci/fedora-31/: Dockerfile
ci/ubuntu-disco/: Dockerfile
src/: all_colors.hpp  draw.cpp  draw.hpp  main.cpp  main.hpp  scheduler.cpp  scheduler.hpp  simulator.cpp  simulator.hpp
